qt4-x11 (4:4.8.5+git121-g2a9ea11+dfsg1-2) UNRELEASED; urgency=low

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * Remove Fix_JavaScriptCore_ftbfs_on_mips64_el.patch, it makes 32 bits
    platforms FTBFS.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 11 Oct 2013 20:44:03 -0300

qt4-x11 (4:4.8.5+git121-g2a9ea11+dfsg1-1) unstable; urgency=low

  * Add Fix_JavaScriptCore_ftbfs_on_mips64_el.patch. It just needs to be
    approved upstream, but it has been already ACKed (Closes: #719763).
    - Fix s390x_jscore.diff so it can be applied on top of the above mentioned
    patch. This last one seems not pushed upstream.
  * Remove sources with minified javascript libs without source
    (Closes: #723036).
    - Increase DFSG revision number.
    I have tried building without those files and everything seems OK except a
    documentation html file that shows the minified javascript code which has
    been removed, so I'll leave it like that.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Fri, 11 Oct 2013 15:23:32 -0300

qt4-x11 (4:4.8.5+git121-g2a9ea11+dfsg-1) unstable; urgency=low

  * Upstream snapshot, git v4.8.5+git121-g2a9ea11.
  * Fix shortcuts with_secondary xkb layout (Closes: #719064).
    Thanks Boris Pek for pointing it out.
  * Refresh patches.
  * Remove patches applied upstream:
    - Add-support-for-the-Linux-m68k-platform.patch.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Sat, 14 Sep 2013 21:28:44 -0300

qt4-x11 (4:4.8.5+dfsg-4) unstable; urgency=low

  * Fix typo in libqt4-opengl-dev dependencies (Closes: #720302).
  * Fix broken symlink to use the system's jquery javascript library
    (Closes: #720950).
  * Apply qtdoc-build-offline-docs.patch to build documentation as offline.
    This means the searchbox will not be available, but it wasn't functional
    after all (Closes: #721111). Thanks Roland Hieber for the patch.
  * Update symbols files with buildds' logs.
